// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LeaderboardTable > render > renders snapshot of loading state 1`] = `
<div>
  <div
    class="rounded-none max-w-2xl mx-auto"
  >
    <div
      class="mb-4"
    >
      <div
        class="rounded-lg border border-slate-200 dark:border-slate-700 bg-white dark:bg-slate-900 p-4"
      >
        <div
          class="flex items-start justify-between mb-3"
        >
          <div>
            <h3
              class="text-lg font-bold text-slate-900 dark:text-slate-100"
            >
              Season 2: Rising Stars
            </h3>
            <span
              class="inline-flex items-center px-2 py-0.5 rounded-full text-xs font-medium mt-1 text-green-600 dark:text-green-400 bg-green-50 dark:bg-green-900/20"
            >
              Active
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-clock w-4 h-4 text-[#3737A4] dark:text-blue-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <polyline
                points="12 6 12 12 16 14"
              />
            </svg>
            <div
              class="flex items-center gap-1 text-sm"
            >
              <span
                class="font-semibold text-[#3737A4] dark:text-blue-400"
              >
                29
              </span>
              <span
                class="text-slate-600 dark:text-slate-400"
              >
                d
              </span>
              <span
                class="font-semibold text-[#3737A4] dark:text-blue-400"
              >
                23
              </span>
              <span
                class="text-slate-600 dark:text-slate-400"
              >
                h
              </span>
              <span
                class="font-semibold text-[#3737A4] dark:text-blue-400"
              >
                59
              </span>
              <span
                class="text-slate-600 dark:text-slate-400"
              >
                m
              </span>
              <span
                class="font-semibold text-[#3737A4] dark:text-blue-400"
              >
                58
              </span>
              <span
                class="text-slate-600 dark:text-slate-400"
              >
                s
              </span>
            </div>
          </div>
        </div>
        <div
          class="space-y-2 text-sm"
        >
          <div
            class="flex items-center gap-2 text-slate-600 dark:text-slate-400"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-calendar w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2v4"
              />
              <path
                d="M16 2v4"
              />
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="4"
              />
              <path
                d="M3 10h18"
              />
            </svg>
            <span>
              Jun 28, 2026
               - 
              Aug 27, 2026
            </span>
          </div>
        </div>
      </div>
    </div>
    <table
      class="w-full rounded-none border-l border-[#808080] dark:border-slate-700 border-collapse"
    >
      <thead>
        <tr
          class="bg-gradient-to-b from-[#3737A4] to-[#0C0C4F] text-white"
        >
          <th
            class="px-4 py-2 text-center border border-r-2 border-white"
          >
            Position
          </th>
          <th
            class="px-4 py-2 text-left border border-r-2 border-white"
          >
            Display Name / Wallet Address
          </th>
          <th
            class="px-4 py-2 text-center"
          >
            Points Won
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          aria-hidden="true"
          class="bg-white dark:bg-slate-900"
        >
          <td
            class="flex items-center justify-center gap-2 border-r-2 border-b-2 border-[#808080] px-4 py-3 text-center dark:border-slate-700"
          >
            <div
              class="animate-pulse skeleton-shimmer h-6 w-6 rounded-full bg-slate-200 dark:bg-slate-800"
            />
            <div
              class="animate-pulse skeleton-shimmer rounded-md h-5 w-4 bg-slate-200 dark:bg-slate-800"
            />
          </td>
          <td
            class="border-r-2 border-b-2 border-[#808080] px-4 py-3 dark:border-slate-700"
          >
            <div
              class="animate-pulse skeleton-shimmer rounded-md h-5 w-1/2 bg-slate-200 dark:bg-slate-800"
            />
          </td>
          <td
            class="border border-b-2 border-[#808080] px-4 py-3 text-center dark:border-slate-700"
          >
            <div
              class="animate-pulse skeleton-shimmer rounded-md mx-auto h-5 w-8 bg-slate-200 dark:bg-slate-800"
            />
          </td>
        </tr>
        <tr
          aria-hidden="true"
          class="bg-white dark:bg-slate-900"
        >
          <td
            class="flex items-center justify-center gap-2 border-r-2 border-b-2 border-[#808080] px-4 py-3 text-center dark:border-slate-700"
          >
            <div
              class="animate-pulse skeleton-shimmer h-6 w-6 rounded-full bg-slate-200 dark:bg-slate-800"
            />
            <div
              class="animate-pulse skeleton-shimmer rounded-md h-5 w-4 bg-slate-200 dark:bg-slate-800"
            />
          </td>
          <td
            class="border-r-2 border-b-2 border-[#808080] px-4 py-3 dark:border-slate-700"
          >
            <div
              class="animate-pulse skeleton-shimmer rounded-md h-5 w-1/2 bg-slate-200 dark:bg-slate-800"
            />
          </td>
          <td
            class="border border-b-2 border-[#808080] px-4 py-3 text-center dark:border-slate-700"
          >
            <div
              class="animate-pulse skeleton-shimmer rounded-md mx-auto h-5 w-8 bg-slate-200 dark:bg-slate-800"
            />
          </td>
        </tr>
        <tr
          aria-hidden="true"
          class="bg-white dark:bg-slate-900"
        >
          <td
            class="flex items-center justify-center gap-2 border-r-2 border-b-2 border-[#808080] px-4 py-3 text-center dark:border-slate-700"
          >
            <div
              class="animate-pulse skeleton-shimmer h-6 w-6 rounded-full bg-slate-200 dark:bg-slate-800"
            />
            <div
              class="animate-pulse skeleton-shimmer rounded-md h-5 w-4 bg-slate-200 dark:bg-slate-800"
            />
          </td>
          <td
            class="border-r-2 border-b-2 border-[#808080] px-4 py-3 dark:border-slate-700"
          >
            <div
              class="animate-pulse skeleton-shimmer rounded-md h-5 w-1/2 bg-slate-200 dark:bg-slate-800"
            />
          </td>
          <td
            class="border border-b-2 border-[#808080] px-4 py-3 text-center dark:border-slate-700"
          >
            <div
              class="animate-pulse skeleton-shimmer rounded-md mx-auto h-5 w-8 bg-slate-200 dark:bg-slate-800"
            />
          </td>
        </tr>
        <tr
          aria-hidden="true"
          class="bg-white dark:bg-slate-900"
        >
          <td
            class="flex items-center justify-center gap-2 border-r-2 border-b-2 border-[#808080] px-4 py-3 text-center dark:border-slate-700"
          >
            <div
              class="animate-pulse skeleton-shimmer h-6 w-6 rounded-full bg-slate-200 dark:bg-slate-800"
            />
            <div
              class="animate-pulse skeleton-shimmer rounded-md h-5 w-4 bg-slate-200 dark:bg-slate-800"
            />
          </td>
          <td
            class="border-r-2 border-b-2 border-[#808080] px-4 py-3 dark:border-slate-700"
          >
            <div
              class="animate-pulse skeleton-shimmer rounded-md h-5 w-1/2 bg-slate-200 dark:bg-slate-800"
            />
          </td>
          <td
            class="border border-b-2 border-[#808080] px-4 py-3 text-center dark:border-slate-700"
          >
            <div
              class="animate-pulse skeleton-shimmer rounded-md mx-auto h-5 w-8 bg-slate-200 dark:bg-slate-800"
            />
          </td>
        </tr>
        <tr
          aria-hidden="true"
          class="bg-white dark:bg-slate-900"
        >
          <td
            class="flex items-center justify-center gap-2 border-r-2 border-b-2 border-[#808080] px-4 py-3 text-center dark:border-slate-700"
          >
            <div
              class="animate-pulse skeleton-shimmer h-6 w-6 rounded-full bg-slate-200 dark:bg-slate-800"
            />
            <div
              class="animate-pulse skeleton-shimmer rounded-md h-5 w-4 bg-slate-200 dark:bg-slate-800"
            />
          </td>
          <td
            class="border-r-2 border-b-2 border-[#808080] px-4 py-3 dark:border-slate-700"
          >
            <div
              class="animate-pulse skeleton-shimmer rounded-md h-5 w-1/2 bg-slate-200 dark:bg-slate-800"
            />
          </td>
          <td
            class="border border-b-2 border-[#808080] px-4 py-3 text-center dark:border-slate-700"
          >
            <div
              class="animate-pulse skeleton-shimmer rounded-md mx-auto h-5 w-8 bg-slate-200 dark:bg-slate-800"
            />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`LeaderboardTable > render > renders snapshot of table with data 1`] = `
<div>
  <div
    class="rounded-none max-w-2xl mx-auto"
  >
    <div
      class="mb-4"
    >
      <div
        class="rounded-lg border border-slate-200 dark:border-slate-700 bg-white dark:bg-slate-900 p-4"
      >
        <div
          class="flex items-start justify-between mb-3"
        >
          <div>
            <h3
              class="text-lg font-bold text-slate-900 dark:text-slate-100"
            >
              Season 2: Rising Stars
            </h3>
            <span
              class="inline-flex items-center px-2 py-0.5 rounded-full text-xs font-medium mt-1 text-green-600 dark:text-green-400 bg-green-50 dark:bg-green-900/20"
            >
              Active
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-clock w-4 h-4 text-[#3737A4] dark:text-blue-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <polyline
                points="12 6 12 12 16 14"
              />
            </svg>
            <div
              class="flex items-center gap-1 text-sm"
            >
              <span
                class="font-semibold text-[#3737A4] dark:text-blue-400"
              >
                29
              </span>
              <span
                class="text-slate-600 dark:text-slate-400"
              >
                d
              </span>
              <span
                class="font-semibold text-[#3737A4] dark:text-blue-400"
              >
                23
              </span>
              <span
                class="text-slate-600 dark:text-slate-400"
              >
                h
              </span>
              <span
                class="font-semibold text-[#3737A4] dark:text-blue-400"
              >
                59
              </span>
              <span
                class="text-slate-600 dark:text-slate-400"
              >
                m
              </span>
              <span
                class="font-semibold text-[#3737A4] dark:text-blue-400"
              >
                59
              </span>
              <span
                class="text-slate-600 dark:text-slate-400"
              >
                s
              </span>
            </div>
          </div>
        </div>
        <div
          class="space-y-2 text-sm"
        >
          <div
            class="flex items-center gap-2 text-slate-600 dark:text-slate-400"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-calendar w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2v4"
              />
              <path
                d="M16 2v4"
              />
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="4"
              />
              <path
                d="M3 10h18"
              />
            </svg>
            <span>
              Jun 28, 2026
               - 
              Aug 27, 2026
            </span>
          </div>
        </div>
      </div>
    </div>
    <table
      class="w-full rounded-none border-l border-[#808080] dark:border-slate-700 border-collapse"
    >
      <thead>
        <tr
          class="bg-gradient-to-b from-[#3737A4] to-[#0C0C4F] text-white"
        >
          <th
            class="px-4 py-2 text-center border border-r-2 border-white"
          >
            Position
          </th>
          <th
            class="px-4 py-2 text-left border border-r-2 border-white"
          >
            Display Name / Wallet Address
          </th>
          <th
            class="px-4 py-2 text-center"
          >
            Points Won
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="bg-slate-50 dark:bg-blue-900/10 font-bold"
        >
          <td
            class="px-4 py-2 flex items-center justify-center gap-2 text-center border-r-2 border-[#808080] dark:border-slate-700 border-b-2"
          >
            <span>
              <div
                data-testid="medal-1"
              >
                Medal 
                1
              </div>
            </span>
            <span
              class="text-[16px] bg-gradient-to-b from-[#576065] to-[#787884] dark:from-slate-200 dark:to-slate-400 bg-clip-text text-transparent"
            >
              1
            </span>
          </td>
          <td
            class="px-4 py-2 border-r-2 border-[#808080] dark:border-slate-700 border-b-2"
          >
            <span
              class="text-[16px] bg-gradient-to-b from-[#576065] to-[#787884] dark:from-slate-200 dark:to-slate-400 bg-clip-text text-transparent"
            >
              Champion
            </span>
          </td>
          <td
            class="px-4 py-2 text-center border border-b-2 border-[#808080] dark:border-slate-700 text-[16px] bg-gradient-to-b from-[#576065] to-[#787884] dark:from-slate-200 dark:to-slate-400 bg-clip-text text-transparent"
          >
            150
          </td>
        </tr>
        <tr
          class="bg-slate-50 dark:bg-blue-900/10 font-bold"
        >
          <td
            class="px-4 py-2 flex items-center justify-center gap-2 text-center border-r-2 border-[#808080] dark:border-slate-700 border-b-2"
          >
            <span>
              <div
                data-testid="medal-2"
              >
                Medal 
                2
              </div>
            </span>
            <span
              class="text-[16px] bg-gradient-to-b from-[#576065] to-[#787884] dark:from-slate-200 dark:to-slate-400 bg-clip-text text-transparent"
            >
              2
            </span>
          </td>
          <td
            class="px-4 py-2 border-r-2 border-[#808080] dark:border-slate-700 border-b-2"
          >
            <span
              class="text-[16px] bg-gradient-to-b from-[#576065] to-[#787884] dark:from-slate-200 dark:to-slate-400 bg-clip-text text-transparent"
            >
              Runner Up
            </span>
          </td>
          <td
            class="px-4 py-2 text-center border border-b-2 border-[#808080] dark:border-slate-700 text-[16px] bg-gradient-to-b from-[#576065] to-[#787884] dark:from-slate-200 dark:to-slate-400 bg-clip-text text-transparent"
          >
            120
          </td>
        </tr>
        <tr
          class="bg-slate-50 dark:bg-blue-900/10 font-bold"
        >
          <td
            class="px-4 py-2 flex items-center justify-center gap-2 text-center border-r-2 border-[#808080] dark:border-slate-700 border-b-2"
          >
            <span>
              <div
                data-testid="medal-3"
              >
                Medal 
                3
              </div>
            </span>
            <span
              class="text-[16px] bg-gradient-to-b from-[#576065] to-[#787884] dark:from-slate-200 dark:to-slate-400 bg-clip-text text-transparent"
            >
              3
            </span>
          </td>
          <td
            class="px-4 py-2 border-r-2 border-[#808080] dark:border-slate-700 border-b-2"
          >
            <span
              class="text-[16px] bg-gradient-to-b from-[#576065] to-[#787884] dark:from-slate-200 dark:to-slate-400 bg-clip-text text-transparent"
            >
              Third
            </span>
          </td>
          <td
            class="px-4 py-2 text-center border border-b-2 border-[#808080] dark:border-slate-700 text-[16px] bg-gradient-to-b from-[#576065] to-[#787884] dark:from-slate-200 dark:to-slate-400 bg-clip-text text-transparent"
          >
            100
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
